--- a/_posts/2016-05-24-security-101.md
+++ b/_posts/2016-05-24-security-101.md
@@ -9,8 +9,11 @@ I thought I'd make a post to help remind myself of some of the important things
 to do when securing a new computer, I'll try to explain some of the reasoning
 behind some of it as well. For both your benefit and mine.
 
+For the sake of this post, I'm going to assume you're setting up a new Ubuntu
+server.
+
 What Do We Need?
-================
+----------------
 
 Instead of starting off installing random programs and configuring them, it's
 better to list some of the things we'll need first. So what will we need to do?
@@ -22,10 +25,138 @@ Accounts and Passwords
 
 Firewall
 :    For blocking off all ports (and therefore services) from being accessible
-     from the wider internet, with the exception of a chosen few. (e.g. ssh and
-     http)
+     from the wider internet, with the exception of a chosen few (e.g. ssh and
+     http). We'll also implement rate limiting here so people making too many
+     connections too quickly will be blocked.
 
-Fail2Ban
-:    To make it harder for people to crack your passwords by brute-forcing ssh.
+SSH Configuration
+:   Configure SSH so that you can't SSH in as root. While we're at it, we may
+    as well make it so you can only log in if you have the correct SSH key.
 
 
+Accounts and Passwords
+----------------------
+
+The first time you log into your new computer, you'll want to create your own
+user account straight away and give it super-user access via `sudo`. The reason
+you'll want to do this instead of setting everything up as root is that being
+forced to type `sudo` before commands that require super-user access is a
+good way to remind yourself that whatever you're changing will affect your
+entire computer, not just your account.
+
+To add a user, bob:
+
+{% highlight bash %}
+adduser bob
+{% endhighlight %}
+
+Then follow the prompts.
+
+To give the user the ability to use sudo, you'll need to add them to the `sudo`
+group:
+
+{% highlight bash %}
+adduser bob sudo
+{% endhighlight %}
+
+When choosing your user's password, it's important that you make sure it's
+reasonably secure. As a general rule of thumb, it should incorporate a
+**minimum** of 8 characters, with 1 or more number and with mixed case.
+
+The reason I'm stressing this point is that on one of the machines I've had in
+the past I gave the `git` user the highly original password, "password",
+because I was using it as a private git repository and wanted to be able to add
+new repositories easily. As you can probably guess, after a while someone
+figured this out, most probably through trial and error (or dumb luck), and
+then used the server (with it's insane internet speeds) to DOS people. Luckily
+after maybe an hour of this excessively high internet usage, the company
+hosting my server realised something was out of the ordinary and shut it down,
+but things could have ended up a lot worse.
+
+So yeah, weak passwords aren't a great idea. Even if you make sure the account
+has very limited abilities.
+
+Once you've created your new user and given him sudo access, login to that
+account:
+
+{% highlight bash %}
+login bob
+{% endhighlight %}
+
+
+Firewalls
+---------
+
+The next step in securing our server is to install a firewall. Think of a
+firewall as the gatekeeper for your computer, it'll block any incoming packets
+to all ports except the few you choose to leave open (usually just SSH and
+HTTP). You can also get the firewall to block certain IP addresses or only
+selectively allow access to ports.
+
+A good example of this is how all of my home computers allow SSH access only if
+you are on the local network. This means that someone trying to SSH in from
+outside (i.e. a hacker or script kiddie) will just be blocked, while you can
+still SSH in from the other room.
+
+The particular firewall we're going to use is the aptly named [Uncomplicated
+FireWall][ufw]. It is essentially just a wrapper around the more complicated
+`iptables` which comes with almost every Linux distro.
+
+First you need to install UFW:
+
+{% highlight bash %}
+sudo apt-get install ufw
+{% endhighlight %}
+
+Then you'll want to enable it:
+
+{% highlight bash %}
+sudo ufw enable
+{% endhighlight %}
+
+You can then view the default rules if you want:
+
+{% highlight bash %}
+sudo ufw status
+{% endhighlight %}
+
+Or, alternatively:
+
+{% highlight bash %}
+sudo ufw status
+{% endhighlight %}
+
+Now that you've got UFW installed and enabled, you'll want to create some rules
+for it. Depending on your particular circumstances, the rules you create will
+differ but at a bare minimum you'll want to allow SSH to pass through the
+firewall. Otherwise how are you going to log into your server later on?
+
+The syntax for adding rules is fairly straightforward:
+
+{% highlight bash %}
+sudo ufw allow in ssh
+{% endhighlight %}
+
+You can specify the port either with a service name (i.e. "ssh"), or its 
+number (i.e. 22).
+
+UFW also has the ability to do `rate limiting`. To deny connections from an 
+IP address that has attempted to initiate 6 or more ssh connections in the last 
+30 seconds, you can do this:
+
+{% highlight bash %}
+sudo ufw limit ssh
+{% endhighlight %}
+
+A slightly more complicated example is only allowing someone to SSH in from the
+local network (for example using CIDR notation, mine is 192.168.0.0/16).
+
+{% highlight bash %}
+sudo ufw allow from 192.168.0.0/16 to 0.0.0.0 port 22
+{% endhighlight %}
+
+The "0.0.0.0" above is just a shortcut for "all interfaces for this
+computer".
+
+
+[ufw]: https://wiki.archlinux.org/index.php/Uncomplicated_Firewall
