--- a/_posts/2016-05-24-security-101.md
+++ b/_posts/2016-05-24-security-101.md
@@ -10,7 +10,8 @@ to do when securing a new computer, I'll try to explain some of the reasoning
 behind some of it as well. For both your benefit and mine.
 
 For the sake of this post, I'm going to assume you're setting up a new Ubuntu
-server.
+server. You should try to do this entire process in one hit, that way you'll
+always be using the same SSH session and won't get accidentally locked out.
 
 What Do We Need?
 ----------------
@@ -99,7 +100,7 @@ outside (i.e. a hacker or script kiddie) will just be blocked, while you can
 still SSH in from the other room.
 
 The particular firewall we're going to use is the aptly named [Uncomplicated
-FireWall][ufw]. It is essentially just a wrapper around the more complicated
+Firewall][ufw]. It is essentially just a wrapper around the more complicated
 `iptables` which comes with almost every Linux distro.
 
 First you need to install UFW:
@@ -157,6 +158,98 @@ sudo ufw allow from 192.168.0.0/16 to 0.0.0.0 port 22
 
 The "0.0.0.0" above is just a shortcut for "all interfaces for this
 computer".
+
+
+Lock Down SSH
+-------------
+
+By default SSH isn't configured in the most secure way. For instance, you are
+allowed to log in as root, and you only need a password in order to log in as
+any other user.
+
+The days of passwords are over. You’ll enhance security and ease of use in one
+fell swoop by ditching those passwords and employing public key authentication
+for your user accounts. 
+
+SSH keys work by generating a pair of very long numbers, one is called the
+`public key` and is given to whoever you want to contact, and the other is 
+called the `private key`, you're the only person who should ever have access to 
+this one. When you attempt to log in using SSH keys, the other computer will 
+send a message encrypted with your public key that can only be decrypted with
+your private key.
+
+The keys themselves are many times longer than your password, often thousands
+of bits long, which means it's a lot less likely that someone can pretend to be
+you by brute-forcing the keys. It also relies on having a specific file on your
+computer which is stored in a place that only you should be able to access,
+which is theoretically a lot safer and more reliable than remembering a
+password.
+
+Additionally, (and probably most importantly) it means you won't need to type
+in a complicated password every time you want to log into a computer. Making
+your life easier and also allowing you to incorporate SSH into your scripts.
+
+To generate a set of SSH keys run the following and follow the prompts:
+
+{% highlight bash %}
+ssh-keygen
+{% endhighlight %}
+
+The defaults are usually good enough for most purposes.
+
+Next you'll want to give your server your computer's public key. Do so by
+creating a new file,
+
+{% highlight bash %}
+vim ~/.ssh/authorized_keys
+{% endhighlight %}
+
+And copy/pasting your public key (`~/.ssh/id_rsa.pub` by default) in at the
+bottom.
+
+Next make sure the authorized keys file has the correct permissions. If you
+don't do this, then SSH will assume they've been tampered with and lock you
+out.
+
+{% highlight bash %}
+chmod 400 /home/bob/.ssh/authorized_keys
+chown bob:bob /home/bob/.ssh -R
+{% endhighlight %}
+
+The next step is to actually go into the SSH configuration file and change
+things so that you can't SSH in as root and so that SSH keys are required.
+
+{% highlight bash %}
+vim /etc/ssh/sshd_config
+{% endhighlight %}
+
+
+Add these lines to the file, inserting the ip address from where you will be
+connecting:
+
+{% highlight %}
+PermitRootLogin no
+PasswordAuthentication no
+{% endhighlight %}
+
+If you know you'll only be logging in from one location (e.g. your workplace),
+you can further strengthen security by locking SSH to your particular IP.
+
+{% highlight bash %}
+AllowUsers bob@(your-ip) bob@(another-ip-if-any)
+{% endhighlight %}
+
+Now finally, restart the SSH service with 
+
+{% highlight bash %}
+sudo service ssh restart
+{% endhighlight %}
+ 
+Or if you're using Systemd:
+
+{% highlight bash %}
+sudo systemctl restart ssh
+{% endhighlight %}
 
 
 [ufw]: https://wiki.archlinux.org/index.php/Uncomplicated_Firewall
