--- a/_posts/2016-05-24-security-101.md
+++ b/_posts/2016-05-24-security-101.md
@@ -227,7 +227,7 @@ vim /etc/ssh/sshd_config
 Add these lines to the file, inserting the ip address from where you will be
 connecting:
 
-{% highlight %}
+{% highlight bash %}
 PermitRootLogin no
 PasswordAuthentication no
 {% endhighlight %}
