Added the conclusion

--- a/_posts/2016-05-24-security-101.md
+++ b/_posts/2016-05-24-security-101.md
@@ -252,4 +252,28 @@ sudo systemctl restart ssh
 {% endhighlight %}
 
 
+Conclusion
+----------
+
+You should now have most of the basics set up. If you want to test your system,
+try scanning it with [nmap][nmap].
+
+Possible next steps:
+* Install an Intrusion Detection System (IDS) like [psad][psad] to notify you
+  whenever someone tries to detect intrusion attempts.
+* Use [SELinux][selinux] to harden the kernel and give you access to some extra
+  security utilities.
+* Remove KDE/Gnome desktops. A desktop on a server is unnecessary, consumes
+  resources, and provides a larger attack surface.
+* Monitor all activity on the server using [psacct or acct][acct]. These
+  applications runs in the background and keeps track of each users activity
+  on your system as well as what resources are being consumed
+
+And of course, make sure your server always has the latest security updates.
+
+
 [ufw]: https://wiki.archlinux.org/index.php/Uncomplicated_Firewall
+[psad]: https://www.digitalocean.com/community/tutorials/how-to-use-psad-to-detect-network-intrusion-attempts-on-an-ubuntu-vps
+[nmap]: https://nmap.org/
+[selinux]: https://en.wikipedia.org/wiki/Security-Enhanced_Linux
+[acct]: http://www.tecmint.com/how-to-monitor-user-activity-with-psacct-or-acct-tools/
