Excluding error pages from the navigation bar

--- a/500.md
+++ b/500.md
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Something went wrong...
+exclude_from_nav: true
 ---
 
 Try that again, and if it still doesn't work, let me know.
